--- a/cv.css
+++ b/cv.css
@@ -83,14 +83,10 @@ body {
     padding: 0 8px;
     padding-right: 18px;
     }
-/* 
-    .logo{
-      margin: 20px auto; 
-      width: 30px; 
-      border-radius: 20px
-    } */
-
-    a:link {
+    .container h4{
+      text-align: justify;
+    }
+   a:link {
       text-decoration: none;
       color: black;
     }
@@ -142,13 +138,13 @@ body {
             }
 
             .content1, .content2 {
-              padding: 0 30px;
+              padding: 0 60px;
             }
 
             .content1 div {
               border: #858585 1px solid;
               padding: 20px;
-              margin-top: 10px;
+              margin-top: 3px;
               border-radius: 5px;
             }
 
@@ -589,168 +585,206 @@ body {
                     font-weight: 300;
                   }
 
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800;900&display=swap');  
- *{  
-   margin:0;  
-   padding:0;  
-   box-sizing: border-box;  
- }  
- body{  
-   font-family: 'Poppins', sans-serif;  
-   min-height: 100vh;  
-   display: block;  
-   align-items: center;  
-   justify-content: center;  
- }  
- .site-footer {  
-  background-color: #26C4C2;  
-  padding: 50px 0 20px;  
-  margin-top: 600px;
-  font-size: 18px;  
-  line-height: 24px;  
-  text-align: center;
-  color: #737373;  
-  box-shadow: 0 10px 20px rgba(0,0,0,0.5);  
- }  
- .site-footer hr {  
-  border-top-color: #bbb;  
-  opacity: 0.5;  
- }  
- .site-footer hr.small {  
-  margin: 20px 0;  
- }  
- .site-footer h6 {  
-  color: #fff;  
-  font-size: 16px;  
-  text-transform: uppercase;  
-  margin-top: 5px;  
-  letter-spacing: 2px;  
- }  
- .site-footer a {  
-  color: #9fbfc0; 
-  font-size: medium; 
- }  
- .site-footer a:hover {  
-  color: #fff;  
-  text-decoration: none;  
- }   
- .footer-links {  
-  padding-left: 0;  
-  list-style: none;  
- }  
- .footer-links li {  
-  display: block;  
- }  
- .footer-links a {  
-  color: #737373;  
- }  
- .footer-links a:active,  
- .footer-links a:focus,  
- .footer-links a:hover {  
-  color: #fff;  
-  text-decoration: none;  
- }   
- .site-footer .social-icons {  
-  text-align: right;  
- }  
- .site-footer .social-icons a {  
-  width: 40px;  
-  height: 40px;  
-  line-height: 40px;  
-  margin-left: 6px;  
-  margin-right: 0;  
-  border-radius: 100%;  
-  background-color: #33353d;  
- }  
- .copyright-text {  
-  margin: 0;  
- }  
- @media (max-width: 991px) {  
-  .site-footer [class^="col-"] {  
-   margin-bottom: 30px;  
-  }  
- }  
- @media (max-width: 767px) {  
-  .site-footer {  
-   padding-bottom: 0;  
-  }  
-  .site-footer .copyright-text,  
-  .site-footer .social-icons {  
-   text-align: center;  
-  }  
- }  
- .social-icons {  
-  padding-left: 0;  
-  margin-bottom: 0;  
-  margin: 50px;
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-  
-  list-style: none;  
- }  
- .social-icons li {  
-  display: inline-block;  
-  text-align: center;
-  margin-bottom: 4px;  
- }   
- .social-icons a {  
-  background-color: #eceeef;  
-  color: #818a91;  
-  font-size: 16px;  
-  display: inline-block;  
-  line-height: 44px;  
-  width: 44px;  
-  height: 44px;  
-  text-align: center;  
-  margin-right: 8px;  
-  border-radius: 100%;  
-  -webkit-transition: all 0.2s linear;  
-  -o-transition: all 0.2s linear;  
-  transition: all 0.2s linear;  
- }  
- .logo{  
-  color:white;  
- }  
- .social-icons a:active,  
- .social-icons a:focus,  
- .social-icons a:hover {  
-  color: #fff;  
-  background-color: white;  
- }   
- .social-icons a.facebook:hover {  
-    background-color: #3b5998;  
-   }  
- .social-icons a.facebook:hover {  
-  background-color: #3b5998;  
- }  
- .social-icons a.twitter:hover {  
-  background-color: #00aced;  
- }  
- .social-icons a.linkedin:hover {  
-  background-color: #007bb6;  
- }  
- .social-icons a.dribbble:hover {  
-  background-color: #ea4c89;  
- }  
+                  @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800;900&display=swap');  
+                  *{  
+                    margin:0;  
+                    padding:0;  
+                    box-sizing: border-box;  
+                  }  
+                  body{  
+                    font-family: 'Poppins', sans-serif;  
+                    min-height: 100vh;  
+                    display: block;  
+                    align-items: center;  
+                    justify-content: center;  
+                  }  
+                  .site-footer {  
+                    background-color: #26C4C2;  
+                    padding: 50px 0 20px;  
+                    margin-top: 600px;
+                    font-size: 18px;  
+                    line-height: 24px;  
+                    text-align: center;
+                    color: #737373;  
+                    box-shadow: 0 10px 20px rgba(0,0,0,0.5);  
+                  }  
+                  .site-footer hr {  
+                    border-top-color: #bbb;  
+                    opacity: 0.5;  
+                  }  
+                  .site-footer hr.small {  
+                    margin: 20px 0;  
+                  }  
+                  .site-footer h6 {  
+                    color: #fff;  
+                    font-size: 16px;  
+                    text-transform: uppercase;  
+                    margin-top: 5px;  
+                    letter-spacing: 2px;  
+                  }  
+                  .site-footer a {  
+                    color: #9fbfc0; 
+                    font-size: medium; 
+                  }  
+                  .site-footer a:hover {  
+                    color: #fff;  
+                    text-decoration: none;  
+                  }   
+                  .footer-links {  
+                    padding-left: 0;  
+                    list-style: none;  
+                  }  
+                  .footer-links li {  
+                    display: block;  
+                  }  
+                  .footer-links a {  
+                    color: #737373;  
+                  }  
+                  .footer-links a:active,  
+                  .footer-links a:focus,  
+                  .footer-links a:hover {  
+                    color: #fff;  
+                    text-decoration: none;  
+                  }   
+                  .site-footer .social-icons {  
+                    text-align: right;  
+                  }  
+                  .site-footer .social-icons a {  
+                    width: 40px;  
+                    height: 40px;  
+                    line-height: 40px;  
+                    margin-left: 6px;  
+                    margin-right: 0;  
+                    border-radius: 100%;  
+                    background-color: #33353d;  
+                  }  
+                  .copyright-text {  
+                    margin: 0;  
+                  }  
+                  @media (max-width: 991px) {  
+                    .site-footer [class^="col-"] {  
+                    margin-bottom: 30px;  
+                    }  
+                  }  
+                  @media (max-width: 767px) {  
+                    .site-footer {  
+                    padding-bottom: 0;  
+                    }  
+                    .site-footer .copyright-text,  
+                    .site-footer .social-icons {  
+                    text-align: center;  
+                    }  
+                  }  
+                  .social-icons {  
+                    padding-left: 0;  
+                    margin-bottom: 0;  
+                    margin: 50px;
+                    display: flex;
+                    flex-direction: row;
+                    justify-content: center;
+                    align-items: center;
+                    
+                    list-style: none;  
+                  }  
+                  .social-icons li {  
+                    display: inline-block;  
+                    text-align: center;
+                    margin-bottom: 4px;  
+                  }   
+                  .social-icons a {  
+                    background-color: #eceeef;  
+                    color: #818a91;  
+                    font-size: 16px;  
+                    display: inline-block;  
+                    line-height: 44px;  
+                    width: 44px;  
+                    height: 44px;  
+                    text-align: center;  
+                    margin-right: 8px;  
+                    border-radius: 100%;  
+                    -webkit-transition: all 0.2s linear;  
+                    -o-transition: all 0.2s linear;  
+                    transition: all 0.2s linear;  
+                  }  
+                  .logo{  
+                    color:white;  
+                  }  
+                  .social-icons a:active,  
+                  .social-icons a:focus,  
+                  .social-icons a:hover {  
+                    color: #fff;  
+                    background-color: white;  
+                  }   
+                  .social-icons a.facebook:hover {  
+                      background-color: #3b5998;  
+                    }  
+                  .social-icons a.facebook:hover {  
+                    background-color: #3b5998;  
+                  }  
+                  .social-icons a.twitter:hover {  
+                    background-color: #00aced;  
+                  }  
+                  .social-icons a.linkedin:hover {  
+                    background-color: #007bb6;  
+                  }  
+                  .social-icons a.dribbble:hover {  
+                    background-color: #ea4c89;  
+                  }  
 
 
- @media (max-width: 1080px) {
-  #heading{
-  width: 180px;
- }
- #heading a{
-  font-size: 30px;
- }
-}
+                  @media (max-width: 1080px) {
+                    #heading{
+                    width: 180px;
+                  }
+                  #heading a{
+                    font-size: 30px;
+                  }
+                  }
 
-@media (max-width: 600px) {
-  #heading{
-    width: 150px;
-  }
-#heading a{
-  font-size: 25px;
-  }
-}
-
+                  @media (max-width: 600px) {
+                    #heading{
+                      width: 150px;
+                    }
+                  #heading a{
+                    font-size: 25px;
+                    }
+                    .content1, .content2 {
+                      padding: 0 60px;
+                    }
+                    .content1 div {
+                      padding: 20px;
+                      margin-top: 3px;
+                      border-radius: 5px;
+                    }
+                    .content2 div {
+                      padding: 20px;
+                      margin-top: 3px;
+                      border-radius: 10px;
+                    }
+                    #colspan{
+                      background-position: center center;
+                      box-shadow: 0 0 15px;
+                      width: 500px;
+                      height: 50%;  
+                      padding: 0 8px;
+                      padding-right: 18px;
+                      margin: 20px 70px;
+                      position: relative;
+                      }
+                      img{
+                        width: 230px;
+                        margin: 20px 125px;
+                      } 
+                      .container h4{
+                        margin: 5px 130px;
+                        text-align: center;
+                      }
+                      .ani{
+                        text-align: center;
+                        margin: 5px 125px;
+                      }
+                      .art {
+                        text-align: center;
+                        margin: 20px 125px;
+                      }
+                  }
