--- a/cv.css
+++ b/cv.css
@@ -86,6 +86,24 @@ body {
     .container h4{
       text-align: justify;
     }
+    /* logo alamat */
+    .log{
+      position: absolute;
+      width: 20px; 
+      border-radius: 30px;
+      
+    }
+    .log2{
+      position: absolute;
+      width: 20px; 
+      border-radius: 10px;
+      margin-top: 5px;
+    }
+    /* alamat */
+    .ban {
+      margin: 5px 22px;
+
+    }
    a:link {
       text-decoration: none;
       color: black;
@@ -787,5 +805,24 @@ body {
                         text-align: center;
                         margin: 20px 125px;
                       }
-                      
+                      /* logo */
+                      .log{
+                        position: absolute;
+                        width: 20px; 
+                        border-radius: 20px;
+                        margin-left: -120px;
+                        margin-top: -1px;
+                      }
+                      .log2{
+                        position: absolute;
+                        width: 20px; 
+                        border-radius: 20px;
+                        margin-left: -8px;
+                        margin-top: 5px;
+                      }
+                      /* alamat */
+                      .ban {
+                        margin: 5px 22px;
+                        text-align: center;
+                      }
                   }
