--- a/cv.css
+++ b/cv.css
@@ -119,7 +119,9 @@ body {
     img {
       width: 230px;  
     }
-  
+
+
+  /* Card about */
         .padding {
             text-align: left;
             margin: 30px auto;
@@ -797,6 +799,7 @@ body {
                         margin: 5px 130px;
                         text-align: center;
                       }
+                      /* js animation */
                       .ani{
                         text-align: center;
                         margin: 5px 125px;
@@ -807,14 +810,14 @@ body {
                       }
                       /* logo */
                       .log{
-                        position: absolute;
+                        /* position: absolute; */
                         width: 20px; 
                         border-radius: 20px;
                         margin-left: -120px;
                         margin-top: -1px;
                       }
                       .log2{
-                        position: absolute;
+                        /* position: absolute; */
                         width: 20px; 
                         border-radius: 20px;
                         margin-left: -8px;
@@ -825,4 +828,10 @@ body {
                         margin: 5px 22px;
                         text-align: center;
                       }
+                      /* Card about */
+                      .padding {
+                        margin-left: 50px;
+                        margin: 13px;
+                        width: 620px;
+                    }
                   }
