--- a/cv.css
+++ b/cv.css
@@ -782,8 +782,6 @@ body {
                       border-radius: 10px;
                     }
                     #colspan{
-                      background-position: center center;
-                      box-shadow: 0 0 15px;
                       width: 500px;
                       height: 50%;  
                       padding: 0 8px;
@@ -791,11 +789,11 @@ body {
                       margin: 20px 70px;
                       position: relative;
                       }
-                      img{
+                      #colspan .yul{
                         width: 230px;
                         margin: 20px 125px;
                       } 
-                      .container h4{
+                      .nama{
                         margin: 5px 130px;
                         text-align: center;
                       }
@@ -815,6 +813,7 @@ body {
                         border-radius: 20px;
                         margin-left: -120px;
                         margin-top: -1px;
+                        text-align: center;
                       }
                       .log2{
                         /* position: absolute; */
@@ -822,6 +821,7 @@ body {
                         border-radius: 20px;
                         margin-left: -8px;
                         margin-top: 5px;
+                        text-align: center;
                       }
                       /* alamat */
                       .ban {
@@ -834,4 +834,5 @@ body {
                         margin: 13px;
                         width: 620px;
                     }
+                    
                   }
