--- a/cv.css
+++ b/cv.css
@@ -38,8 +38,6 @@ body {
     position: sticky;
     top: 0;
     z-index: 100000;
-    
-    
 }
 #menu ul {
     list-style: none;
@@ -82,6 +80,15 @@ body {
     float: left;
     padding: 0 8px;
     padding-right: 18px;
+    }
+    .concact{
+      width: 20px; 
+      border-radius: 20px;
+      display: flex;
+      flex-direction: row;
+      margin-top: -5px;
+      margin-bottom: -5px;
+      
     }
     .container h4{
       text-align: justify;
@@ -389,7 +396,7 @@ body {
                     justify-content: center;
                     height: 60vh;
                     width: 100%;
-                    resize: both;
+            
                     overflow: auto;
                   }
                   .card-area {
@@ -725,6 +732,7 @@ body {
                     -webkit-transition: all 0.2s linear;  
                     -o-transition: all 0.2s linear;  
                     transition: all 0.2s linear;  
+                    
                   }  
                   .logo{  
                     color:white;  
@@ -764,21 +772,32 @@ body {
                   @media (max-width: 600px) {
                     #heading{
                       width: 150px;
+                      margin-top: 10px;
+                      margin-right: 30px;
                     }
                   #heading a{
                     font-size: 25px;
+                    margin: -30px;
+                    margin-right: -20px;
                     }
+
+                    #menu {
+                      width: 630px;
+                  }
+                    #menu ul li a {
+                      font-size: 22px;
+                  }
                     .content1, .content2 {
                       padding: 0 60px;
                     }
                     .content1 div {
                       padding: 20px;
-                      margin-top: 3px;
+                      margin-top: 5px;
                       border-radius: 5px;
                     }
                     .content2 div {
                       padding: 20px;
-                      margin-top: 3px;
+                      margin-top: 5px;
                       border-radius: 10px;
                     }
                     #colspan{
@@ -786,25 +805,34 @@ body {
                       height: 50%;  
                       padding: 0 8px;
                       padding-right: 18px;
-                      margin: 20px 70px;
+                      margin: 25px 75px;
                       position: relative;
+                      font-size: 19px;
                       }
                       #colspan .yul{
                         width: 230px;
-                        margin: 20px 125px;
+                        margin: 25px 125px;
                       } 
+
                       .nama{
-                        margin: 5px 130px;
+                        margin: 6px 130px;
                         text-align: center;
                       }
                       /* js animation */
                       .ani{
                         text-align: center;
-                        margin: 5px 125px;
+                        margin: 10px 125px;
+                      }
+                      .concact{
+                        width: 50px; 
+                        border-radius: 20px;
+                        margin: 5px px;
+
                       }
                       .art {
                         text-align: center;
                         margin: 20px 125px;
+                        
                       }
                       /* logo */
                       .log{
@@ -827,6 +855,7 @@ body {
                       .ban {
                         margin: 5px 22px;
                         text-align: center;
+                        font-size: 21px;
                       }
                       /* Card about */
                       .padding {
@@ -834,5 +863,22 @@ body {
                         margin: 13px;
                         width: 620px;
                     }
-                    
+                    .card-area {
+                      height: 200px;
+                      padding: 20rem;
+                      width: 30px;
+                      width: 300px;
+                    }
+                    main h2{
+                      margin: 0px;
+                    }
+                    .card-section {
+                      height: 200px;
+                      width: 50%;
+                    }
+
+                    /* footer */
+                    .social-icons a {
+                      margin-bottom: 50px;
+                    }  
                   }
