--- a/cv.css
+++ b/cv.css
@@ -4,6 +4,16 @@
 html {
     scroll-behavior: smooth;
 }
+
+.baris {
+  background-color: black;
+  display: block;
+  width: 100%;
+  margin: 100px auto 0;
+  margin-top: 90px;
+  height: 8px;
+}
+
 *{
     margin: 0px;
     padding: 0px;
@@ -15,9 +25,7 @@ body {
 }
 #heading{
     float: left;
-    width: 700px;
-    
-    
+    width: 900px;
 }
 #heading a {
     line-height: 50px;
@@ -45,7 +53,10 @@ body {
 }
 #menu ul li {
     float: left;
-    line-height: 65px
+    line-height: 75px;
+    font-size: 25px;
+    padding: 20px;
+    margin-top: -20px;
 }
 #menu ul li a {
     float:left; 
@@ -74,12 +85,13 @@ body {
     background-color: rgb(207, 146, 199);
     background-position: center center;
     box-shadow: 0 0 15px;
-    width: 280px;
+    width: 300px;
     height: 50%;
     text-align: justify;
     float: left;
     padding: 0 8px;
     padding-right: 18px;
+    font-size: 20px;
     }
     .concact{
       width: 20px; 
@@ -131,8 +143,8 @@ body {
   /* Card about */
         .padding {
             text-align: left;
-            margin: 30px auto;
-            margin-left: 21%;
+            margin: 50px;
+            margin-left: 19%;
         }
 
         /* Persen skill */
@@ -191,11 +203,12 @@ body {
             }
             
 
+
             .skills {
               display: flex;
               justify-content: center;
+              margin: 100px;
               flex-wrap: wrap;
-              margin-top: 50px;
               
             }
 
@@ -323,7 +336,7 @@ body {
                     font-size: 1.2rem;
                     font-weight: 600;
                     margin-top: 0;
-                    overflow: hidden;
+                    
                     padding: .7rem .75rem;
                     position: relative;
                     text-decoration: none;
@@ -386,18 +399,13 @@ body {
 
                   .main {
                     text-align: center;
-                    background: linear-gradient(
-                      to bottom right,
-                      #eee8dd,
-                      #d3d1cc
-                    );
+                    
                     display: flex;
                     flex-direction: column;
                     justify-content: center;
                     height: 60vh;
                     width: 100%;
             
-                    overflow: auto;
                   }
                   .card-area {
                     align-items: center;
@@ -406,6 +414,7 @@ body {
                     height: 100%;
                     justify-content: space-evenly;
                     padding: 1rem;
+                    margin-bottom: -50px;
                   }
               
                   .card-section {
@@ -771,9 +780,9 @@ body {
 
                   @media (max-width: 600px) {
                     #heading{
-                      width: 150px;
+                      width: 70px;
                       margin-top: 10px;
-                      margin-right: 30px;
+                      margin-right: 35px;
                     }
                   #heading a{
                     font-size: 25px;
@@ -785,7 +794,8 @@ body {
                       width: 630px;
                   }
                     #menu ul li a {
-                      font-size: 22px;
+                      font-size: 19px;
+                      padding-left: 2px;
                   }
                     .content1, .content2 {
                       padding: 0 60px;
@@ -808,6 +818,7 @@ body {
                       margin: 25px 75px;
                       position: relative;
                       font-size: 19px;
+                      margin-top: -60px;
                       }
                       #colspan .yul{
                         width: 230px;
@@ -826,7 +837,7 @@ body {
                       .concact{
                         width: 50px; 
                         border-radius: 20px;
-                        margin: 5px px;
+                        margin: 5px 170px;
 
                       }
                       .art {
@@ -862,21 +873,31 @@ body {
                         margin-left: 50px;
                         margin: 13px;
                         width: 620px;
+                        font-size: 20px;
+                    }
+                    .content1 {
+                      margin-top: 100px;
                     }
                     .card-area {
                       height: 200px;
                       padding: 20rem;
                       width: 30px;
                       width: 300px;
+                      
                     }
                     main h2{
                       margin: 0px;
                     }
-                    .card-section {
-                      height: 200px;
-                      width: 50%;
+                    main{
+                      display: flex;
+                      flex-direction: column;
                     }
 
+                    .card-section{
+                      display: flex;
+                      flex-direction: column;
+                    }
+                    
                     /* footer */
                     .social-icons a {
                       margin-bottom: 50px;
