--- a/cv.css
+++ b/cv.css
@@ -10,7 +10,7 @@ html {
   display: block;
   width: 100%;
   margin: 100px auto 0;
-  margin-top: 90px;
+  margin-top: 80px;
   height: 8px;
 }
 
@@ -25,22 +25,22 @@ body {
 }
 #heading{
     float: left;
-    width: 900px;
+    width: 700px;
 }
 #heading a {
-    line-height: 50px;
+    line-height: 70px;
     text-decoration: none;
     padding-left: 50px;
     color:#FFF;
     font-family: aardvark cafe;
-    font-size: 40px;
+    font-size: 30px;
     
     
 }
 #menu {
     background:#26C4C2;
     width: 100%;
-    height: 65px;
+    height: 75px;
     margin: 0px;
     padding: 0px;
     position: sticky;
@@ -65,6 +65,7 @@ body {
     text-align:center; 
     color:#FFF; 
     text-decoration:none; 
+    font-size: 19px;
 }
 #menu ul ul {
     display:none; 
@@ -85,13 +86,13 @@ body {
     background-color: rgb(207, 146, 199);
     background-position: center center;
     box-shadow: 0 0 15px;
-    width: 300px;
+    width: 280px;
     height: 50%;
     text-align: justify;
     float: left;
     padding: 0 8px;
     padding-right: 18px;
-    font-size: 20px;
+    font-size: 19px;
     }
     .concact{
       width: 20px; 
@@ -143,8 +144,8 @@ body {
   /* Card about */
         .padding {
             text-align: left;
-            margin: 50px;
-            margin-left: 19%;
+            margin: 50px auto;
+            margin-left: 20%;
         }
 
         /* Persen skill */
